# GenerativeAI_apps

./: .gitignore  README.md  pyproject.toml
1.LLM_application_using_Gemini/: app.py  chat.py  vision.py
10.Fine-Tuning_Gemma_model/: Gemma_Fine_tuning.ipynb  Gemma_Fine_tuning.ipynb のコピー
11.Agentic_RAG_with_langgraph/: agentic_rag.ipynb  agentic_ragのコピー.ipynb  agentic_ragのコピー.ipynb  langgraph_intro.ipynb
12.Building_Agentic_AI_Course/: my_financial_agent.py
12.Building_Agentic_AI_Course/1_Financial AI analyst/: financial_agent.py  playground.py
12.Building_Agentic_AI_Course/2_bulding_agentic_rag_for_vectordb/: memo.md  my_pdf_assistant.py  pdf_assistant.py  requirements.txt
12.Building_Agentic_AI_Course/Financial AI analyst/: requirements.txt
13.RAGシステムの実装/: 2_rag-instruction.ipynb  3_langchain_rag.ipynb  gemma2-rag-langchain.ipynb  rag_langchain.ipynb
2.MultiLanguage_extractor/: pdf_ocr_app.py  radiation_ocr_app.py
3.End_to_End_Document_Q&A_Gemma/: app.py
4.TextToSQL/: sql.py  sqlite.py  student.db
5.Application_Tracking_System/: app.py  modify_app.py
6.Gemini_Health_app/: app.py
7.Youtube_transcribe/: app.py
8.AI_Agents_using_crewAI/: agents.py  crew.py  new-blog-post.md  tasks.py  tools.py
9.AI_Agent_GoogleGemini/: agents.py  crew.py  new-blog-post.md  tasks.py  tools.py
phidata_AI_Agent/: 1_financial_agent.py  playground.py
practice/: 1_app.py  chat.py  chat_bot.py  goole_search_gemini2.0_streamlit.py  graph_ocr.py  log_prac.py  python.ipynb  revised_radiation_ocr_app.py  vision_revised.py
surprise_travel/: crew.py  main.py
(+38 files in other folders)
